--- a/src/SampleImageEditor/SampleImageEditor.Android/Properties/AndroidManifest.xml
+++ b/src/SampleImageEditor/SampleImageEditor.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="ru.bitoobit.imageeditor" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="28" />
-	<application android:label="BB Image Editor" android:icon="@mipmap/icon"></application>
+	<application android:label="BB Image Editor" android:icon="@mipmap/iconapp"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
