--- a/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
+++ b/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
@@ -61,6 +61,9 @@
       <Version>1.68.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.4.0.991265</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
