--- a/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
+++ b/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
@@ -58,7 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SkiaSharp">
-      <Version>1.68.1</Version>
+      <Version>1.68.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.HarfBuzz">
+      <Version>1.68.1.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Forms">
