--- a/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
+++ b/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
@@ -55,7 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SkiaSharp">
-      <Version>1.68.1</Version>
+      <Version>1.68.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.HarfBuzz">
+      <Version>1.68.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
