--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.CA1031.severity = none
+
+# IDE0055: Исправить форматирование
+dotnet_diagnostic.IDE0055.severity = none
