--- a/src/SampleImageEditor/SampleImageEditor/SampleImageEditor.csproj
+++ b/src/SampleImageEditor/SampleImageEditor/SampleImageEditor.csproj
@@ -12,6 +12,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Banana.jpg" />
+    <None Remove="Resources\BananaMatte.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Banana.jpg" />
+    <EmbeddedResource Include="Resources\BananaMatte.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
