--- a/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
+++ b/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
@@ -57,8 +57,8 @@
     <PackageReference Include="SkiaSharp">
       <Version>1.68.1.1</Version>
     </PackageReference>
-    <PackageReference Include="SkiaSharp.HarfBuzz">
-      <Version>1.68.1.1</Version>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.4.0.991477</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
