--- a/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
+++ b/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ImageHelper.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="PlatformHelper.cs" />
+    <Compile Include="Renders\CustomEditorRender.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TouchEffect.cs" />
