--- a/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
+++ b/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Platform.cs" />
     <Compile Include="PlatformHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renders\CustomEditorRender.cs" />
     <Compile Include="TouchEffect.cs" />
     <Compile Include="TouchRecognizer.cs" />
   </ItemGroup>
