--- a/src/BitooBitImageEditor.UWP/BitooBitImageEditor.UWP.csproj
+++ b/src/BitooBitImageEditor.UWP/BitooBitImageEditor.UWP.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Platform.cs" />
     <Compile Include="PlatformHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renders\CustomEditorRender.cs" />
     <Compile Include="TouchEffect.cs" />
     <EmbeddedResource Include="Properties\BitooBitImageEditor.UWP.rd.xml" />
   </ItemGroup>
