--- a/src/SampleImageEditor/SampleImageEditor.iOS/SampleImageEditor.iOS.csproj
+++ b/src/SampleImageEditor/SampleImageEditor.iOS/SampleImageEditor.iOS.csproj
@@ -84,6 +84,8 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <ITunesArtwork Include="iTunesArtwork" />
+    <ITunesArtwork Include="iTunesArtwork%402x" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
