--- a/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
+++ b/src/BitooBitImageEditor.IOS/BitooBitImageEditor.IOS.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImageHelper.cs" />
+    <Compile Include="IOSHapticFeedback.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="PlatformHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
