--- a/src/BitooBitImageEditor/BitooBitImageEditor.csproj
+++ b/src/BitooBitImageEditor/BitooBitImageEditor.csproj
@@ -47,6 +47,8 @@
     <None Remove="Resources\rotate_right.png" />
     <None Remove="Resources\save.png" />
     <None Remove="Resources\stickers.png" />
+    <None Remove="Resources\text_fill.png" />
+    <None Remove="Resources\text_not_fill.png" />
     <None Remove="Resources\trash.png" />
     <None Remove="Resources\trash_open.png" />
     <None Remove="Resources\undo.png" />
@@ -80,17 +82,19 @@
     <EmbeddedResource Include="Resources\rotate_right.png" />
     <EmbeddedResource Include="Resources\save.png" />
     <EmbeddedResource Include="Resources\stickers.png" />
+    <EmbeddedResource Include="Resources\text_fill.png" />
+    <EmbeddedResource Include="Resources\text_not_fill.png" />
     <EmbeddedResource Include="Resources\trash.png" />
     <EmbeddedResource Include="Resources\trash_open.png" />
     <EmbeddedResource Include="Resources\undo.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fody" Version="6.0.6">
+    <PackageReference Include="Fody" Version="6.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="PropertyChanged.Fody" Version="3.2.3" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.2.8" />
     <PackageReference Include="SkiaSharp" Version="1.68.1.1" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.1.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
