--- a/src/BitooBitImageEditor/BitooBitImageEditor.csproj
+++ b/src/BitooBitImageEditor/BitooBitImageEditor.csproj
@@ -15,7 +15,15 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Version>1.0.1.7</Version>
     <AssemblyVersion>1.0.1.7</AssemblyVersion>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\Repos\BitooBitImageEditor\src\BitooBitImageEditor\BitooBitImageEditor.xml</DocumentationFile>
