--- a/src/SampleImageEditor/SampleImageEditor.iOS/SampleImageEditor.iOS.csproj
+++ b/src/SampleImageEditor/SampleImageEditor.iOS/SampleImageEditor.iOS.csproj
@@ -142,7 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
