--- a/src/SampleImageEditor/SampleImageEditor/SampleImageEditor.csproj
+++ b/src/SampleImageEditor/SampleImageEditor/SampleImageEditor.csproj
@@ -442,7 +442,7 @@
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody" Version="3.2.9" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
 
   <ItemGroup>
