--- a/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
+++ b/src/BitooBitImageEditor.Droid/BitooBitImageEditor.Droid.csproj
@@ -65,6 +65,9 @@
     <PackageReference Include="Xamarin.Forms">
       <Version>4.8.0.1560</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.MediaGallery">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
